--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -38,6 +38,7 @@ aside {
 
     & img {
       margin-top: 2rem;
+      margin-bottom: 0.5rem;
     }
   }
 
